--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/FullLayout.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/FullLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<MainLayout>
+<MainLayout
+    TopbarClass="App-Topbar">
     <LogoContent>
         <AppLogo />
     </LogoContent>
@@ -36,6 +37,7 @@
                 </IconButton>
             </div>
         </Hidden>
+        <ToggleTheme />
     </ActionsContent>
     <SidebarContent>
         <Profile
