--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/SmallLayout.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/SmallLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<MiniLayout>
+<MiniLayout
+    TopbarClass="App-Topbar">
     <LogoContent>
         <AppLogo />
     </LogoContent>
