--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/AppView.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/AppView.razor
@@ -1,6 +1,6 @@
 ﻿@inherits DisposableComponentBase
 
-<InjectedResources />
+<InjectedStyles />
 
 <div id="search-and-results-area">
     <div id="search-area" class="px-2 py-3">
@@ -17,6 +17,8 @@
 <div id="selections-area" class="p-3 pl-4">
     <Shortlist />
 </div>
+
+<InjectedScripts />
 
 @code
 {
