--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/Components/SearchResult.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/Components/SearchResult.razor
@@ -1,4 +1,4 @@
-﻿@inherits ObservableComponentBase
+﻿@inherits PureComponentBase
 @inject IAppState AppState
 
 <div class="mb-4 d-flex align-items-center">
