--- a/Skclusive.Blazor.Material/Material.App.View/Layout/FullLayout.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/Layout/FullLayout.razor
@@ -13,6 +13,9 @@
     <BodyContent>
         @Body
     </BodyContent>
+    <ActionsContent>
+        <ToggleTheme />
+    </ActionsContent>
     <SidebarContent>
         <Navigation
             Class="FullLayout-Navigation"
