--- a/Skclusive.Blazor.Material/Material.App.View/Pages/Counter.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/Pages/Counter.razor
@@ -10,7 +10,11 @@
     Current count: @currentCount
 </Typography>
 
-<Button Color="@Color.Primary" OnClick="IncrementCount">Click me</Button>
+<Button
+    Color="@Color.Primary"
+    OnClick="IncrementCount">
+    Click me
+</Button>
 
 @code
 {
