--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/AppLayoutStyles.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/AppLayoutStyles.razor
@@ -1,14 +1,18 @@
-<style>
-    .FullLayout-Divider {
-        margin: 16px 0px;
-    }
+@inherits StyleComponentBase
 
-    .FullLayout-Navigation {
-        margin-bottom: 16px;
-    }
+.FullLayout-Divider {
+    margin: 16px 0px;
+}
 
-    .FullLayout-Signout {
-        margin-left: 8px;
-    }
-</style>
+.FullLayout-Navigation {
+    margin-bottom: 16px;
+}
 
+.FullLayout-Signout {
+    margin-left: 8px;
+}
+
+header.App-Topbar {
+    color: var(--theme-palette-background-custom-appbar-color);
+    background-color: var(--theme-palette-background-custom-appbar-background-color);
+}
