--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/_Imports.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/_Imports.razor
@@ -16,7 +16,7 @@
 @using Skclusive.Blazor.Dashboard.App.View.ProductList
 @using Skclusive.Blazor.Dashboard.App.View.OrderList
 @using Skclusive.Blazor.Dashboard.App.View.Chart
-@using Skclusive.Blazor.Dashboard.App.View.Resource
+@using Skclusive.Blazor.Dashboard.App.View.Styles
 @using Skclusive.Blazor.Dashboard.App.View.Logo
 
 @using Skclusive.Core.Component
@@ -24,7 +24,6 @@
 
 @using Skclusive.Material.Core
 @using Skclusive.Material.Component
-@using Skclusive.Material.Theme
 @using Skclusive.Material.Form
 @using Skclusive.Material.Input
 @using Skclusive.Material.Text
