--- a/Skclusive.Blazor.Material/Material.App.View/AppView.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/AppView.razor
@@ -1,17 +1,8 @@
-﻿<AppResources />
+﻿@using Skclusive.Material.Theme
 
-<Router
-    AppAssembly="@typeof(FullLayout).Assembly">
-    <Found
-        Context="routeData">
-        <RouteView
-            RouteData="@routeData"
-            DefaultLayout="@typeof(FullLayout)" />
-    </Found>
-    <NotFound>
-        <LayoutView
-            Layout="@typeof(SmallLayout)">
-            <NotFound />
-        </LayoutView>
-    </NotFound>
-</Router>
+<ThemeProvider
+    Head>
+    <RouterLayout
+        Main="@typeof(FullLayout)"
+        Mini="@typeof(SmallLayout)" />
+</ThemeProvider>
