--- a/Skclusive.Blazor.Messenger/Messenger.App.View/MessengerView.razor
+++ b/Skclusive.Blazor.Messenger/Messenger.App.View/MessengerView.razor
@@ -1,5 +1,7 @@
-﻿@namespace Skclusive.Blazor.Messenger.App.View
+﻿@using Skclusive.Material.Theme
+@namespace Skclusive.Blazor.Messenger.App.View
 
-<MessengerResources />
-
-<ChatView />
+<ThemeProvider>
+    <MessengerResources />
+    <ChatView />
+</ThemeProvider>
