--- a/Skclusive.Blazor.Dashboard/Dashboard.BrowserPrerendered.Host/Pages/_Host.cshtml
+++ b/Skclusive.Blazor.Dashboard/Dashboard.BrowserPrerendered.Host/Pages/_Host.cshtml
@@ -14,9 +14,9 @@
     <base href="~/" />
 </head>
 <body>
-    <app>
+    <div id="app">
         <component type="typeof(Skclusive.Blazor.Dashboard.App.View.DashboardView)" render-mode="WebAssemblyPrerendered" />
-    </app>
+    </div>
 
   <!--  TODO: need to investigate why visible on load
       <div id="blazor-error-ui">
