--- a/Skclusive.Blazor.FlightFinder/FlightFinder.Server.Host/Pages/_Host.cshtml
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.Server.Host/Pages/_Host.cshtml
@@ -16,9 +16,9 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>
+    <div id="app">
         <component type="typeof(Skclusive.Blazor.FlightFinder.View.AppView)" render-mode="Server" />
-    </app>
+    </div>
 
   <!--  TODO: need to investigate why visible on load
       <div id="blazor-error-ui">
